# music-game

./: CMakeLists.txt  GameApp.cpp  GameApp.h  README.md  main.cpp  pch.h
Project1Lib/: Audio.cpp  Audio.h  CMakeLists.txt  Declaration.cpp  Declaration.h  DeclarationImage.cpp  DeclarationImage.h  DeclarationMeter.cpp  DeclarationMeter.h  DeclarationNote.cpp  DeclarationNote.h  DeclarationScoreBoard.cpp  DeclarationScoreBoard.h  DeclarationSoundBoard.cpp  DeclarationSoundBoard.h  Game.cpp  Game.h  GameView.cpp  GameView.h  Image.cpp  Image.h  Item.cpp  Item.h  ItemImage.cpp  ItemImage.h  ItemMeter.cpp  ItemMeter.h  ItemScoreBoard.cpp  ItemScoreBoard.h  ItemSoundBoard.cpp  ItemSoundBoard.h  ItemTrack.cpp  ItemTrack.h  ItemVisitor.cpp  ItemVisitor.h  Level.cpp  Level.h  MainFrame.cpp  MainFrame.h  Meter.cpp  (+25 more)
Tests/: CMakeLists.txt  DeclarationSoundBoardTest.cpp  DeclarationTest.cpp  EmptyTest.cpp  GameTest.cpp  ItemTrackTest.cpp  LoadTest.cpp  MusicNoteTest.cpp  gtest_main.cpp
levels/: level1.xml  level3.xml
